# billing

./: .gitignore  CLAUDE.md  프로젝트_초안.md
backend/: migrate_db.py  pyproject.toml
backend/app/: config.py  main.py  utils.py
backend/app/api/: additional_charge.py  alibaba.py  billing.py  billing_profile.py  contract_billing_profile.py  file_import.py  hb.py  master.py  pro_rata.py  slip.py  slip_template.py  split_billing.py
backend/app/models/: alibaba.py  billing.py  billing_profile.py  hb.py  master.py  slip.py
backend/app/schemas/: billing.py
backend/app/services/: deposit.py
backend/scripts/: schedule_exchange_sync.bat  sync_exchange_rates.py
data_sample/: 1. 매출전표양식_2512.CSV  202512-enduser.csv  202512-reseller.csv  BP_CODE.CSV  TAX_CODE.CSV  hb_account_alibaba.json  hb_company_alibaba.json  hb_contract_alibaba.json  계정코드.CSV  매출계약번호.CSV  부서코드.CSV  오퍼링코드.CSV
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  ui.tsx
frontend/src/pages/: Billing.tsx  BillingProfile.tsx  Dashboard.tsx  HB.tsx  Import.tsx  Master.tsx  Slip.tsx  SlipTemplate.tsx
frontend/src/types/: index.ts
